<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Shaderkit::ImporterWizard</class>
 <widget class="QWizard" name="Shaderkit::ImporterWizard">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Import a model</string>
  </property>
  <property name="windowIcon">
   <iconset resource="../../gfx/gfx.qrc">
    <normaloff>:/icons/logo.png</normaloff>:/icons/logo.png</iconset>
  </property>
  <property name="options">
   <set>QWizard::NoBackButtonOnLastPage|QWizard::NoBackButtonOnStartPage</set>
  </property>
  <widget class="QWizardPage" name="wizardPage1">
   <layout class="QGridLayout" name="gridLayout">
    <property name="margin">
     <number>0</number>
    </property>
    <item row="0" column="0">
     <widget class="QLineEdit" name="filename"/>
    </item>
    <item row="0" column="1">
     <widget class="QPushButton" name="browse">
      <property name="text">
       <string>Browse...</string>
      </property>
     </widget>
    </item>
    <item row="1" column="0">
     <widget class="QCheckBox" name="optimize">
      <property name="text">
       <string>Optimize meshes/graph</string>
      </property>
      <property name="checked">
       <bool>true</bool>
      </property>
     </widget>
    </item>
    <item row="2" column="0">
     <widget class="QCheckBox" name="merge_materials">
      <property name="text">
       <string>Merge duplicate materials</string>
      </property>
      <property name="checked">
       <bool>true</bool>
      </property>
     </widget>
    </item>
    <item row="3" column="0">
     <widget class="QCheckBox" name="fix_normals">
      <property name="text">
       <string>Fix infacing normals</string>
      </property>
      <property name="checked">
       <bool>true</bool>
      </property>
     </widget>
    </item>
    <item row="4" column="0">
     <widget class="QCheckBox" name="find_degenerates">
      <property name="text">
       <string>Find degenerates</string>
      </property>
      <property name="checked">
       <bool>true</bool>
      </property>
     </widget>
    </item>
    <item row="5" column="0">
     <widget class="QCheckBox" name="cache_locality">
      <property name="text">
       <string>Improve cache locality</string>
      </property>
      <property name="checked">
       <bool>true</bool>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QWizardPage" name="wizardPage2">
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="margin">
     <number>0</number>
    </property>
    <item>
     <widget class="QTreeWidget" name="tree">
      <property name="verticalScrollMode">
       <enum>QAbstractItemView::ScrollPerPixel</enum>
      </property>
      <property name="columnCount">
       <number>2</number>
      </property>
      <attribute name="headerVisible">
       <bool>false</bool>
      </attribute>
      <column>
       <property name="text">
        <string notr="true">1</string>
       </property>
      </column>
      <column>
       <property name="text">
        <string notr="true">2</string>
       </property>
      </column>
     </widget>
    </item>
    <item>
     <widget class="QCheckBox" name="manualDrag">
      <property name="enabled">
       <bool>false</bool>
      </property>
      <property name="text">
       <string>Select center location &amp;&amp; scale by mouse drag</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QCheckBox" name="autoScale">
      <property name="toolTip">
       <string>Scales the object group so that it fits inside a 50x50x50 box. If disabled, the original size is used.</string>
      </property>
      <property name="text">
       <string>Automatic scale</string>
      </property>
      <property name="checked">
       <bool>true</bool>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
 </widget>
 <resources>
  <include location="../../gfx/gfx.qrc"/>
 </resources>
 <connections/>
</ui>
